eks/vsr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vsr-app
  labels:
    app: vsr-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vsr-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: vsr-app
    spec:
      containers:
        - image: 403364721735.dkr.ecr.eu-central-1.amazonaws.com/vsr-repo:a48b7fb1ee2a7ae15dcdcf562d38ebdfab1c0281
          imagePullPolicy: Always
          name: vsr-app
          ports:
            - containerPort: 8000
              protocol: TCP
              name: gunicorn
