eks/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: vsr-app
spec:
  selector:
    app: vsr-app
  type: LoadBalancer
  ports:
   -  protocol: TCP
      port: 80
      targetPort: 8000
