eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vsr-app
spec:
  defaultBackend:
    service:
      name: vsr-app
      port:
        number: 80
